creation de l'entité User

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,18 +1,18 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory:
-          memory:
-            users:
-              hugo: {password: $2y$10$FDuXh0dJCLuhMWaesLtqvetPZ7cYkSyQdHkD.Kz8HMNwr/V8mbGT6, roles: ROLE_ADMIN}
-              dupont: {password: $2y$10$I9FKCsp4fikpH.6ynUqmdOC.w7jZkugNGq1IixSoQlS1ojVhH1rJO, roles: ROLE_USER}
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: lazy
-            provider: users_in_memory
+            provider: app_user_provider
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -30,3 +30,6 @@ security:
           Symfony\Component\Security\Core\User\User:
             algorithm: bcrypt
             cost: 15
+          App\Entity\User:
+               algorithm: auto
+
