ajout de deux user de test dans la base de données

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,5 +31,4 @@ security:
             algorithm: bcrypt
             cost: 15
           App\Entity\User:
-               algorithm: auto
-
+               algorithm: bcrypt
